test/files/continuations-neg/t5314-npe.scala
object Test extends App {
  def bar(x:Int) = { return x; x }  // NPE
}
